[workspace]
resolver = "2"
members = [
    "cozo-core",
    "cozorocks",
    "cozo-bin",
    "cozo-core-examples",
]
# Language bindings are deferred in the mnestic fork — the fork targets a Rust
# agentic-memory substrate (consumed by mindgraph-rs). The binding crates are
# kept in-tree but excluded from the workspace build/maintenance for now.
exclude = [
    "cozo-lib-c",
    "cozo-lib-java",
    "cozo-lib-wasm",
    "cozo-lib-swift",
    "cozo-lib-python",
    "cozo-lib-nodejs",
]

[profile.bench]
lto = true
debug = true

[profile.dev.package."mnestic-rocks"]
opt-level = 3
