[package]
name = "mnestic-rocks"
version = "0.1.9"
edition = "2021"
license = "MPL-2.0"
authors = ["Ziyang Hu", "Shan Rizvi (mnestic fork)"]
description = "RocksDB bindings for mnestic — a maintained fork of cozo's cozorocks bridge"
homepage = "https://github.com/shuruheel/mnestic"
repository = "https://github.com/shuruheel/mnestic"
documentation = "https://docs.cozodb.org"
exclude = ["rocksdb/docs", "rocksdb/java"]

# The published package is `mnestic-rocks`, but the importable crate name stays
# `cozorocks` so `cozo-core`'s `use cozorocks::` and `cozorocks?/feature` refs
# keep working unchanged (mirrors the mnestic/cozo rename idiom).
[lib]
name = "cozorocks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cxx = "1.0.69"
miette = "5.10.0"
libc = "0.2"
tikv-jemalloc-sys = { version = "0.5", features = ["unprefixed_malloc_on_supported_platforms"], optional = true }
lz4-sys = { version = "1.9" }
zstd-sys = { version = "2.0", features = ["zdict_builder"] }

[features]
jemalloc = ["tikv-jemalloc-sys"]
io-uring = ["pkg-config"]

[build-dependencies]
cxx-build = "1.0.69"
pkg-config = { version = "0.3.25", optional = true }
cc = { version = "1.0", features = ["parallel"] }
