[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-store-mnestic"
version = "0.1.0"
description = "LangGraph BaseStore backed by mnestic — embedded agent memory with atomic batches and one-call BM25+vector hybrid search."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MPL-2.0" }
authors = [{ name = "Shan Rizvi" }]
keywords = ["langgraph", "mnestic", "agent-memory", "basestore", "hybrid-search", "cozodb"]
dependencies = [
    "mnestic>=0.12.2",
    "langgraph-checkpoint>=4.1,<5",
]

[project.urls]
Homepage = "https://github.com/shuruheel/mnestic"
Repository = "https://github.com/shuruheel/mnestic"

[tool.hatch.build.targets.wheel]
packages = ["langgraph_store_mnestic"]
